[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "chitra"
author = "Aniket Maurya"
author-email = "hello@aniketmaury.com"
home-page = "https://github.com/aniketmaurya/chitra"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires = [
    "tensorflow >= 2.3",
    "tensorflow-addons>=0.13.0",
    "tf-keras-vis>=0.5.3",
    "matplotlib",
    "pillow",
    "imgaug >=0.4.0",
    "requests >=2.24.0,<3.0.0"
]
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://chitra.readthedocs.io/en/latest"

[tool.flit.metadata.requires-extra]
all = [
    # Converter
    "onnx",
    "onnx2pytorch",
    "tf2onnx",
    # Server
    "fastapi", "uvicorn", "pydantic",
    # tf
    "tensorflow-serving-api",
    # torch
    "grpc",
    "torch"
]

[tool.isort]
profile = "google"
