[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "chitra"
author = "Aniket Maurya"
author-email = "hello@aniketmaury.com"
home-page = "https://github.com/aniketmaurya/chitra"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires = [
    "tensorflow >= 2.3",
    "tensorflow-addons >=0.13.0",
    "tf-keras-vis >=0.5.3",
    "pytorch-lightning",
    "matplotlib",
    "pillow",
    "imgaug >=0.4.0",
    "scikit-learn",
    "typeguard",
    "gradio >=2.2.2",
    "typer",
]
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://chitra.readthedocs.io/en/latest"

[tool.flit.metadata.requires-extra]
serve = [
    "fastapi", "uvicorn", "pydantic", "python-multipart", "tensorflow-serving-api",
]
converter = [
    "onnx", "tf2onnx",
]
test = [
    "pytest",
    "pytest-asyncio",
    "coverage",
]

[tool.isort]
profile = "black"

[tool.flit.scripts]
chitra = "chitra.cli.main:app"
